add css ol counter to layout.less

--- a/index.html
+++ b/index.html
@@ -180,24 +180,33 @@
         <div class="col g1">
             <h4>Ordered list</h4>
             <ol>
-                <li>List item</li>
+                <li>List item
+                    <ol>
+                        <li>List item</li>
+                        <li>List item
+                            <ol>
+                                <li>List item</li>
+                            </ol>
+                        </li>
+                    </ol>
+                </li>
                 <li>List item</li>
                 <li>List item
-                <ol>
-                    <li>List item level 2</li>
-                    <li>List item level 2
                     <ol>
-                        <li>List item level 3</li>
-                        <li>List item level 3</li>
+                        <li>List item level 2</li>
+                        <li>List item level 2
+                            <ol>
+                                <li>List item level 3</li>
+                                <li>List item level 3</li>
+                            </ol>
+                        </li>
                     </ol>
-                    </li>
-                </ol>
                 </li>
             </ol>						
         </div>
 
-        <div class="col g1">
-            <h4>Unordered list</h4>
+        <div class="col g1 step">
+            <h1>Unordered list</h1>
             <ul>
                 <li>List item 01</li>
                 <li>List item 02</li>
@@ -260,7 +269,6 @@
             <legend>legend</legend>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus.</p>
                 <h2>Form Element</h2>
-                <div class="gcon4 row c4">
                     <div class="col g1">
 
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.</p>
@@ -323,7 +331,6 @@
                             </form> 
                         </div>
                     </aside>
-                </div>
         </fieldset>
         <small><a href="#site">[top]</a></small>
         <hr />
