add .box(width&height:100%) squre to mixing

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
 <div id="site">
 
-    <header class="row c4 clearfix">
+    <header class="row clearfix">
         <h1 class="gigantic">.gigantic</h1>
-        <div class="col g2">
+        <div class="col g6">
             <h2>2/4col:headers</h2>
         </div>
-        <div class="col g2 last">
+        <div class="col g6 last">
             <h1>heading 1</h1>
             <h2>heading 2</h2>
             <h3>heading 3</h3>
@@ -67,19 +67,19 @@
     ======================================
     -->
 
-    <section id="hgroups" class="row c4 clearfix">
+    <section id="hgroups" class="row clearfix">
         <h2>col 4: hgroups</h2>
         <hgroup class="noob">
             <h1>21 Jan 2020</h1>
             <h2>hgroup</h2>
             <h3>this hgroup uses .noob class, formated with date, headind and sideline</h3>
         </hgroup>
-        <div class="col g1">
+        <div class="col g3">
             <h4>p.twisted</h4>
             <p class="twisted">The purpose of this HTML is to help determine what default settings are with CSS and to make sure that all possible HTML Elements are included in this HTML so as to not miss any possible Elements when designing a site.</p>
         </div>
 
-        <div class="col g1">
+        <div class="col g3">
             <hgroup class="coudal">
                 <h2>sideline</h2>
                 <h1>coudal hgroup</h1>
@@ -87,7 +87,7 @@
             <p>Lorem ipsum dolor sit amet, <a href="#" title="test link">test link</a> adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
         </div>
 
-        <div class="col g1">
+        <div class="col g3">
             <hgroup class="ale">
                 <h1>ale hgroup headings</h1>
                 <h2>just ale hgroup subheadings</h2>
@@ -95,7 +95,7 @@
             <p>Lorem ipsum dolor sit amet, <em>emphasis</em> consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
         </div>
 
-        <div class="col g1 last">
+        <div class="col g3 last">
             <hgroup class="timoni">
                 <h1>17 Nov 2011</h1>
                 <h2>This is col 4, using timoni hgroup</h2>
@@ -112,28 +112,28 @@
     ======================================
     -->
     
-    <section id="buttons" class="row c6 clearfix">
+    <section id="buttons" class="row clearfix">
         <h3>buttons</h3>
-        <div class="col g1">
+        <div class="col g2">
             <div class="callto">
                 <a href="#">.coolbtn</a>
             </div>
         </div>
-        <div class="col g1">
+        <div class="col g2">
 
         </div>
-        <div class="col g1">
+        <div class="col g2">
 
         </div>
-        <div class="col g1">
+        <div class="col g2">
 
         </div>
-        <div class="col g1">
+        <div class="col g2">
             <div class="btn">
                 <p><a href="#">.button</a></p>
             </div>
         </div>
-        <div class="col g1 last">
+        <div class="col g2 last">
             <div class="round">
                 <p>this is round coner</p>
             </div>
@@ -148,10 +148,10 @@
     ======================================
     -->
 
-    <section id="listing" class="c6 clearfix row">
+    <section id="listing" class="clearfix row">
         <h2>col 6: list style</h2>
 
-        <div class="col g1 grad">
+        <div class="col g2 grad">
             <h4>Definition List</h4>
             <dl>
                 <dt>Definition List Title</dt>
@@ -159,7 +159,7 @@
             </dl>
         </div>
 
-        <div class="col g1">
+        <div class="col g2">
             <h4>Ordered List</h4>
             <ol>
                 <li>List Item 1</li>
@@ -168,7 +168,7 @@
             </ol>
         </div>
 
-        <div class="col g1">
+        <div class="col g2">
             <h4>Unordered List</h4>
             <ul>
                 <li>List Item 1</li>
@@ -177,7 +177,7 @@
             </ul>
         </div>
 
-        <div class="col g1">
+        <div class="col g2">
             <h4>Ordered list</h4>
             <ol>
                 <li>List item
@@ -205,7 +205,7 @@
             </ol>						
         </div>
 
-        <div class="col g1 step">
+        <div class="col g2 step">
             <h1>Unordered list</h1>
             <ul>
                 <li>List item 01</li>
@@ -225,7 +225,7 @@
             </ul>
         </div>
 
-        <div class="col g1 last">
+        <div class="col g2 last">
             <h3>nav</h3>
             <nav>
                 <ul>
@@ -244,15 +244,15 @@
     section 4 : images
     ======================================
     -->
-    <section id="img" class="row c6">
+    <section id="img" class="row clearfix ">
             <h3>img.fullscale & .scrollbar; & .box-sizing;</h3>
-            <div class="img col g3">
+            <div class="img col g6">
                 <img class="fullscale" src="img/bg.jpg" alt="Language" />
             </div>
-            <div class="col g2">
+            <div class="col g4">
                 <img class="fullscale" src="img/bg.jpg" alt="Language" />
             </div>
-            <div class="col g1 last">
+            <div class="col g2 last">
                 <img class="fullscale" src="img/bg.jpg" alt="Language" />
             </div>
     </section>
@@ -269,7 +269,7 @@
             <legend>legend</legend>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus.</p>
                 <h2>Form Element</h2>
-                    <div class="col g1">
+                    <div class="col g3">
 
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.</p>
 
@@ -291,7 +291,7 @@
                             <p><input class="button" type="reset" value="Clear" /> <input class="button" type="submit" value="Submit" /></p>
                         </form>
                     </div>
-                    <div class="col g1">
+                    <div class="col g3">
                         <form>
                             <select name="select_element">
                                 <optgroup label="Option Group 1">
@@ -319,7 +319,7 @@
                             </p>
                         </form>
                     </div>
-                    <aside class="col g2 last">
+                    <aside class="col g6 last">
                         <div class="sexyform">
                             <h4>this form is .sexyform</h4>
                             <form action="get.php">
@@ -368,21 +368,21 @@
     section 5
     ======================================
     -->
-    <section id="precon" class"row c6 clearfix">
+    <section id="precon" class"row clearfix">
         <div class="row c6">
             <h1 id="misc">Misc Stuff - abbr, acronym, pre, code, sub, sup, etc.</h1>
 
-            <div class="col g2">
+            <div class="col g4">
                 <p>Lorem <sup>superscript</sup> dolor <sub>subscript</sub> amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. <cite>cite</cite>. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. <acronym title="National Basketball Association">NBA</acronym> Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.  <abbr title="Avenue">AVE</abbr></p>
             </div>
 
-            <div class="col g2">
+            <div class="col g4">
 
                             <pre><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. <acronym title="National Basketball Association">NBA</acronym> Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.  <abbr title="Avenue">AVE</abbr></p></pre>
 
             </div>
 
-            <div class="col g2 last">
+            <div class="col g4 last">
 
                 <blockquote>
                     "This stylesheet is going to help so freaking much." <br />-Blockquote
