change example layout

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         $(document).ready(function() {
             $('#grid').load('_grid.html');
             $('#typo').load('_type.html');
+            $('#hgroup').load('_hgroup.html');
             $('#form').load('_form.html');
             $('#btn').load('_btn.html');
         });
@@ -54,6 +55,7 @@
     <div id="site">
 <div id="grid"></div>
 <div id="typo"></div>
+<div id="hgroup"></div>
 <div id="form"></div>
 <div id="btn"></div>
     </div><!--/site-->
