--- a/_grid.html
+++ b/_grid.html
@@ -47,3 +47,43 @@
 <div class="row clearfix">
     <div class="g12 col backgrey last">1</div>
 </div>
+
+<!-- pushes -->
+<div class="row clearfix">
+    <div class="g1 col backgrey">1</div>
+</div>
+<div class="row clearfix">
+    <div class="p1 g1 col backgrey">2</div>
+</div>
+<div class="row clearfix">
+    <div class="p2 g1 col backgrey">3</div>
+</div>
+<div class="row clearfix">
+    <div class="p3 g1 col backgrey">4</div>
+</div>
+<div class="row clearfix">
+    <div class="p4 g1 col backgrey">5</div>
+</div>
+<div class="row clearfix">
+    <div class="p5 g1 col backgrey">6</div>
+</div>
+<div class="row clearfix">
+    <div class="p6 g1 col backgrey">7</div>
+</div>
+<div class="row clearfix">
+    <div class="p7 g1 col backgrey">8</div>
+</div>
+<div class="row clearfix">
+    <div class="p8 g1 col backgrey">9</div>
+</div>
+<div class="row clearfix">
+    <div class="p9 g1 col backgrey">10</div>
+</div>
+<div class="row clearfix">
+    <div class="p10 g1 col backgrey">11</div>
+</div>
+<div class="row clearfix">
+    <div class="p11 g1 col backgrey">12</div>
+</div>
+
+
