change example layout

--- a/_grid.html
+++ b/_grid.html
@@ -1,89 +1,109 @@
-<div class="row clearfix">
-    <div class="g1 col backgrey">1</div>
-    <div class="g1 col backgrey">2</div>
-    <div class="g1 col backgrey">3</div>
-    <div class="g1 col backgrey">4</div>
-    <div class="g1 col backgrey">5</div>
-    <div class="g1 col backgrey">6</div>
-    <div class="g1 col backgrey">7</div>
-    <div class="g1 col backgrey">8</div>
-    <div class="g1 col backgrey">9</div>
-    <div class="g1 col backgrey">10</div>
-    <div class="g1 col backgrey">11</div>
-    <div class="g1 col last backgrey">12</div>
-</div>
+<section class="textinnerc">
+
+    <!-- pushes -->
+    <div class="row clearfix">
+        <div class="g1 col backgrey">1</div>
+        <div class="g11 col backblue last">2</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p1 g1 col backgrey">2</div>
+        <div class="g10 col backblue last">2</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p2 g1 col backgrey">3</div>
+        <div class="g9 col backblue last">3</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p3 g1 col backgrey">4</div>
+        <div class="g8 col backblue last">3</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p4 g1 col backgrey">5</div>
+        <div class="g7 col backblue last">3</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p5 g1 col backgrey">6</div>
+        <div class="g6 col backblue last">3</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p6 g1 col backgrey">7</div>
+        <div class="g5 col backblue last">3</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p7 g1 col backgrey">8</div>
+        <div class="g4 col backblue last">3</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p8 g1 col backgrey">9</div>
+        <div class="g3 col backblue last">3</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p9 g1 col backgrey">10</div>
+        <div class="g2 col backblue last">3</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p10 g1 col backgrey">11</div>
+        <div class="g1 col backblue last">3</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p11 g1 col backgrey">12</div>
+    </div>
+
+    <!-- 12 * g1 -->
+    <div class="row clearfix">
+        <div class="g1 col backgrey">1</div>
+        <div class="g1 col backgrey">2</div>
+        <div class="g1 col backgrey">3</div>
+        <div class="g1 col backgrey">4</div>
+        <div class="g1 col backgrey">5</div>
+        <div class="g1 col backgrey">6</div>
+        <div class="g1 col backgrey">7</div>
+        <div class="g1 col backgrey">8</div>
+        <div class="g1 col backgrey">9</div>
+        <div class="g1 col backgrey">10</div>
+        <div class="g1 col backgrey">11</div>
+        <div class="g1 col last backgrey">12</div>
+    </div>
 
 
-<div class="row clearfix">
-    <div class="g2 col backgrey">1</div>
-    <div class="g2 col backgrey">2</div>
-    <div class="g2 col backgrey">3</div>
-    <div class="g2 col backgrey">4</div>
-    <div class="g2 col backgrey">5</div>
-    <div class="g2 col backgrey last">6</div>
-</div>
+    <!-- 6 * g2 -->
+    <div class="row clearfix">
+        <div class="g2 col backgrey">1</div>
+        <div class="g2 col backgrey">2</div>
+        <div class="g2 col backgrey">3</div>
+        <div class="g2 col backgrey">4</div>
+        <div class="g2 col backgrey">5</div>
+        <div class="g2 col backgrey last">6</div>
+    </div>
 
 
-<div class="row clearfix">
-    <div class="g3 col backgrey">1</div>
-    <div class="g3 col backgrey">2</div>
-    <div class="g3 col backgrey">3</div>
-    <div class="g3 col backgrey last">4</div>
-</div>
+    <!-- 4 * g3 -->
+    <div class="row clearfix">
+        <div class="g3 col backgrey">1</div>
+        <div class="g3 col backgrey">2</div>
+        <div class="g3 col backgrey">3</div>
+        <div class="g3 col backgrey last">4</div>
+    </div>
 
 
-<div class="row clearfix">
-    <div class="g4 col backgrey">1</div>
-    <div class="g4 col backgrey">2</div>
-    <div class="g4 col backgrey last">3</div>
-</div>
+    <!-- 3 * g4 -->
+    <div class="row clearfix">
+        <div class="g4 col backgrey">1</div>
+        <div class="g4 col backgrey">2</div>
+        <div class="g4 col backgrey last">3</div>
+    </div>
 
-<div class="row clearfix">
-    <div class="g6 col backgrey">1</div>
-    <div class="g6 col backgrey last">1</div>
-</div>
-
-
-<div class="row clearfix">
-    <div class="g12 col backgrey last">1</div>
-</div>
-
-<!-- pushes -->
-<div class="row clearfix">
-    <div class="g1 col backgrey">1</div>
-</div>
-<div class="row clearfix">
-    <div class="p1 g1 col backgrey">2</div>
-</div>
-<div class="row clearfix">
-    <div class="p2 g1 col backgrey">3</div>
-</div>
-<div class="row clearfix">
-    <div class="p3 g1 col backgrey">4</div>
-</div>
-<div class="row clearfix">
-    <div class="p4 g1 col backgrey">5</div>
-</div>
-<div class="row clearfix">
-    <div class="p5 g1 col backgrey">6</div>
-</div>
-<div class="row clearfix">
-    <div class="p6 g1 col backgrey">7</div>
-</div>
-<div class="row clearfix">
-    <div class="p7 g1 col backgrey">8</div>
-</div>
-<div class="row clearfix">
-    <div class="p8 g1 col backgrey">9</div>
-</div>
-<div class="row clearfix">
-    <div class="p9 g1 col backgrey">10</div>
-</div>
-<div class="row clearfix">
-    <div class="p10 g1 col backgrey">11</div>
-</div>
-<div class="row clearfix">
-    <div class="p11 g1 col backgrey">12</div>
-</div>
+    <!-- 2 * g6 -->
+    <div class="row clearfix">
+        <div class="g6 col backgrey">1</div>
+        <div class="g6 col backgrey last">1</div>
+    </div>
 
 
+    <!-- 1 * g12 -->
+    <div class="row clearfix">
+        <div class="g12 col backgrey last">1</div>
+    </div>
+
+
+</section>
