editing some html sample layout

--- a/_grid.html
+++ b/_grid.html
@@ -1,5 +1,7 @@
-<section class="textinnerc">
-
+<h3>Grids</h3>
+<p><strong>Total freedom</strong>, it is a fluid grid with auto calculation, define your own gutter width and number of columns (maximun 16, no minimun).</p>
+<section id="grids" class="textinnerc">
+<hr />
     <!-- pushes -->
     <div class="row clearfix">
         <div class="g1 col backgrey">1</div>
