--- a/_hgroup.html
+++ b/_hgroup.html
@@ -1,5 +1,7 @@
+<h3>Hgroups</h3>
+<p><strong>Just Typography</strong> composed from headings and paragraphs to create sexying headlines</p>
+<hr />
 <section id="hgroups" class="row clearfix">
-    <h2>col 4: hgroups</h2>
     <hgroup class="noob">
         <h1>21 Jan 2020</h1>
         <h2>hgroup</h2>
@@ -34,6 +36,3 @@
         <p>Lorem ipsum dolor sit amet, <em>emphasis</em> consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
     </div>
 </section>
-
-<small><a href="#site">[top]</a></small>
-<hr />
