--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <script language="javascript" type="text/javascript">
         $(document).ready(function() {
             $('#grid').load('_grid.html');
-            $('#typo').load('_type.html');
+            $('#typo').load('_typo.html');
             $('#hgroup').load('_hgroup.html');
             $('#form').load('_form.html');
             $('#btn').load('_btn.html');
@@ -51,14 +51,13 @@
 </head>
 
 <body lang="en">
-
     <div id="site">
-<div id="grid"></div>
-<div id="typo"></div>
-<div id="hgroup"></div>
-<div id="form"></div>
-<div id="btn"></div>
+
+        <div id="grid"></div>
+        <div id="typo"></div>
+        <div id="hgroup"></div>
+        <div id="form"></div>
+        <div id="btn"></div>
+
     </div><!--/site-->
-
 </html>
-
