update and [add]colours bblue,bgreen,borange,bpink,bpurple,byellow; nav>pagination, pagination.clean; tables, tables.grid;

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             $('#typo').load('_typo.html');
             $('#hgroup').load('_hgroup.html');
             $('#form').load('_form.html');
-            $('#btn').load('_btn.html');
+            $('#table').load('_table.html');
+            $('#nav').load('_nav.html');
+            $('#colours').load('_colours.html');
         });
     </script>
 </head>
@@ -57,7 +59,9 @@
         <div id="typo"></div>
         <div id="hgroup"></div>
         <div id="form"></div>
-        <div id="btn"></div>
+        <div id="table"></div>
+        <div id="nav"></div>
+        <div id="colours"></div>
 
     </div><!--/site-->
 </html>
