--- a/_table.html
+++ b/_table.html
@@ -1,21 +1,41 @@
-<section id="table">
-    <h1>tables</h1>
-    <table cellspacing="0" cellpadding="0">
-        <tr>
-            <th>Table Header 1</th><th>Table Header 2</th><th>Table Header 3</th>
-        </tr>
-        <tr>
-            <td>Division 1</td><td>Division 2</td><td>Division 3</td>
-        </tr>
-        <tr class="even">
-            <td>Division 1</td><td>Division 2</td><td>Division 3</td>
-        </tr>
-        <tr>
-            <td>Division 1</td><td>Division 2</td><td>Division 3</td>
-        </tr>
-
-    </table>
-
-    <small><a href="#site">[top]</a></small>
-    <hr />
+<h2>tables</h2>
+<p><strong>Less is more!</strong> simple table formatting</p>
+<hr />
+<section id="table" class="fullscale clearfix">
+    <div class="row">
+        <div class="col g6">
+            <table>
+                <caption>caption</caption>
+                <tr>
+                    <th>THeader 1</th><th>THeader 2</th><th>THeader 3</th>
+                </tr>
+                <tr>
+                    <td>Division 1</td><td>Division 2</td><td>Division 3</td>
+                </tr>
+                <tr>
+                    <td>Division 1</td><td>Division 2</td><td>Division 3</td>
+                </tr>
+                <tr>
+                    <td>Division 1</td><td>Division 2</td><td>Division 3</td>
+                </tr>
+            </table>
+        </div>
+        <div class="col g6 last">
+            <table class="grid">
+                <caption>.grid</caption>
+                <tr>
+                    <th>THeader 1</th><th>THeader 2</th><th>THeader 3</th>
+                </tr>
+                <tr>
+                    <td>Division 1</td><td>Division 2</td><td>Division 3</td>
+                </tr>
+                <tr>
+                    <td>Division 1</td><td>Division 2</td><td>Division 3</td>
+                </tr>
+                <tr>
+                    <td>Division 1</td><td>Division 2</td><td>Division 3</td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </section>
