relocate sample files

--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
 
     <script language="javascript" type="text/javascript">
         $(document).ready(function() {
-            $('#grid').load('_grid.html');
-            $('#typo').load('_typo.html');
-            $('#hgroup').load('_hgroup.html');
-            $('#form').load('_form.html');
-            $('#table').load('_table.html');
-            $('#nav').load('_nav.html');
-            $('#colours').load('_colours.html');
+            $('#grid').load('sample/_grid.html');
+            $('#typo').load('sample/_typo.html');
+            $('#hgroup').load('sample/_hgroup.html');
+            $('#form').load('sample/_form.html');
+            $('#table').load('sample/_table.html');
+            $('#nav').load('sample/_nav.html');
+            $('#colours').load('sample/_colours.html');
         });
     </script>
+    <script src="js/script.js"></script>
 </head>
 
 <body lang="en">
