[add] topbar, botbar, option:dark,light

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 
 <body lang="en">
-    <div id="site">
+    <div id="site" style="/* 30px height for top/bot bar */ margin:35px auto;">
 
         <div id="grid"></div>
         <div id="typo"></div>
