--- a/sample/_nav.html
+++ b/sample/_nav.html
@@ -1,10 +1,10 @@
 <h3>Navigation</h3>
 <p><strong>Navs</strong> for top, bottom, and sidebar</p>
 <hr />
-<section id="nav" class="clearfix fullscale">
+<section id="nav" class="clearfix fullscale posr">
     <div class="row">
         <div class="g2 col">
-            <p> simple pagination, using .pagination and nested &lt;a&gt; </p>
+            <p> simple pagination, using .pagination and nested &lt;a&gt; the top and bot bar are abosolute positioning </p>
         </div>
         <div class="g3 col">
             <h5>.pagination</h5>
@@ -32,5 +32,42 @@
                 <a href="#" class="next">>></a>
             </div>
         </div>
+    </div> <!-- end row middle -->
+    <div class="row">
+
+    </div>
+
+    <div class="topbar dark">
+        <a href="#"><h5>topbar.dark</h5></a>
+        <span>
+            <a href="#">dropdown</a>
+            <ul>
+                <li><a href="#">a</a></li>
+                <li><a href="#">b</a></li>
+            </ul>
+        </span>
+        <a href="#">just testing</a>
+        <form action=""><input type="text" name="submit" placeholder="search"/></form>
+        <a href="#"><img src="#"/></a>
+        <a href="#"><img src="#"/></a>
+        <a href="#"><img src="#"/></a>
+        <a href="#"><img src="#"/></a>
+    </div>
+
+    <div class="botbar light">
+        <a href="#"><h5>botbar.light</h5></a>
+        <span>
+            <a href="#">drop-up</a>
+            <ul>
+                <li><a href="#">a</a></li>
+                <li><a href="#">b</a></li>
+            </ul>
+        </span>
+        <a href="#"> just testing</a>
+        <form action=""><input type="text" name="submit" placeholder="search"/></form>
+        <a href="#"><img src="#"/></a>
+        <a href="#"><img src="#"/></a>
+        <a href="#"><img src="#"/></a>
+        <a href="#"><img src="#"/></a>
     </div>
 </section>
