fix topbar/botbar ul

--- a/sample/_nav.html
+++ b/sample/_nav.html
@@ -42,8 +42,8 @@
         <span>
             <a href="#">dropdown</a>
             <ul>
-                <li><a href="#">a</a></li>
-                <li><a href="#">b</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
             </ul>
         </span>
         <a href="#">just testing</a>
@@ -59,8 +59,8 @@
         <span>
             <a href="#">drop-up</a>
             <ul>
-                <li><a href="#">a</a></li>
-                <li><a href="#">b</a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
             </ul>
         </span>
         <a href="#"> just testing</a>
